<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="login_label">Log in</string>
    <string name="title_acivity_timeline">Home Timeline</string>
    <string name="user_name">User Name</string>
    <string name="screen_name">Screen Name</string>
    <string name="created_at">created_at</string>
    <string name="body">body message</string>
    <string name="tweet">Tweet</string>
    <string name="hint">What\'s happening?</string>
    <string name="text_count">140</string>
    <string name="button_close">button_close</string>
    <string name="introduction_string_1">Welcome to Twitter</string>
    <string name="introduction_string_2">Get real-time update about what matters to you</string>
    <string name="log_out">Log out</string>
    <string name="reply">Reply</string>
    <string name="profile_menu_string">My Profile</string>

</resources>