<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="false"
    android:paddingBottom="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    android:paddingLeft="12dp">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/profile_image_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tweet_image_view"
        android:layout_below="@+id/body_text"
        android:layout_alignLeft="@+id/user_name_text"/>

    <!--<com.yqritc.scalablevideoview.ScalableVideoView-->
        <!--android:id="@+id/tweet_media_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_below="@id/body_text"-->
        <!--android:layout_alignLeft="@+id/user_name_text"-->
        <!--app:scalableType="fitCenter"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/user_name_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_alignTop="@id/profile_image_view"
        android:layout_toRightOf="@+id/profile_image_view"
        android:layout_toEndOf="@+id/profile_image_view"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screen_name_text"
        android:text="@string/screen_name"
        android:textSize="14sp"
        android:layout_alignBottom="@id/user_name_text"
        android:layout_toRightOf="@+id/user_name_text"
        android:layout_toEndOf="@+id/user_name_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:id="@+id/created_at_text"
        android:textSize="14sp"
        android:layout_alignBottom="@id/user_name_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:id="@+id/body_text"
        android:textColor="@android:color/black"
        android:lineSpacingExtra="4sp"
        android:layout_below="@+id/user_name_text"
        android:layout_toRightOf="@+id/profile_image_view"
        android:layout_toEndOf="@+id/profile_image_view"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/reply_button"
        android:background="@drawable/reply_off"
        android:layout_below="@+id/tweet_image_view"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:layout_alignLeft="@+id/tweet_image_view"
        android:layout_alignStart="@+id/tweet_image_view" />

    <ImageButton
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:id="@+id/retweet_button"
        android:background="@drawable/retweet_off"
        android:layout_below="@+id/tweet_image_view"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/reply_button"
        android:layout_marginLeft="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/retweet_text_view"
        android:layout_below="@+id/tweet_image_view"
        android:layout_toRightOf="@+id/retweet_button"
        android:layout_marginTop="9dp" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/favorite_button"
        android:background="@drawable/favorite_off"
        android:layout_below="@+id/tweet_image_view"
        android:layout_toRightOf="@+id/retweet_button"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/favorite_text_view"
        android:layout_below="@+id/tweet_image_view"
        android:layout_toRightOf="@+id/favorite_button"
        android:layout_marginTop="9dp" />

</RelativeLayout>